fix position of hero image and change color of logo to blue to fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,9 @@
     background: url("../images/african-presidents.jpeg") no-repeat center center;
 
    }
+
+   #hero-section{
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+   }
